Authors Create and search

--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -6,10 +6,8 @@
     <title>My Library</title>
 </head>
 <body>
-    Before
-    <br>
+    <%- include('../partials/errorMessage') %>
+    <%- include('../partials/header') %>
     <%- body %>
-    <br>
-    After
 </body>
 </html>
