--- a/views/authors/_form_fields.ejs
+++ b/views/authors/_form_fields.ejs
@@ -1,2 +1,2 @@
 <label for="authorName">Author Name</label>
-<input type="text", name="authorName", value=<%= locals.authorName %>>
+<input type="text", name="name", value="<%= author.name %>">
